--- a/session-demos/2018/Oracle-Code/Bengaluru/PerfCounters/README
+++ b/session-demos/2018/Oracle-Code/Bengaluru/PerfCounters/README
@@ -3,7 +3,7 @@ ODP.NET Performance Counters Demo README
 To run the performance counters demo, modify the connection string and connect descriptor to connect to an Oracle Database with a 
 sample HR schema.
 
-For ODP.NET 12.2 or earlier versions, use the OraProvCfg.exe utility included with the Oracle Universal Installer, MSI, or xcopy 
+For ODP.NET 18c or earlier versions, use the OraProvCfg.exe utility included with the Oracle Universal Installer, MSI, or xcopy 
 installs to register ODP.NET performance counters. Registration is required for the counters to be available in Windows Performance 
 Monitor. 
 
@@ -11,9 +11,9 @@ Run the following command when using managed ODP.NET:
     OraProvCfg /action:register /product:odpm /component:perfcounter /providerpath:"<directory path>\oracle.manageddataaccess.dll“
 Or run the following command with Windows administrator privileges when using unmanaged ODP.NET:
     OraProvCfg /action:register /product:odp /component:perfcounter /providerpath:"<directory path>\oracle.dataaccess.dll“
-OraProvCfg.exe is not available in ODP.NET 12.2 and earlier NuGet releases.
+OraProvCfg.exe is not available in ODP.NET 18c and earlier NuGet releases.
 
-In ODAC 18c Release 2 and higher, all installs, including NuGet, will have a batch script for registering the counters.
+In Oracle 19c and higher, all installs, including NuGet, will have a script for registering ODP.NET counters.
 
 In the .NET configuration file, set the PerformanceCounters parameter to indicate which counters to monitor. Refer to the ODP.NET 
 documentation of the specific version for these counter values. Optionally, you may set the poolName parameter for each pool you wish 
