--- a/samples/performance-counters/README
+++ b/samples/performance-counters/README
@@ -1,7 +1,9 @@
 ODP.NET Performance Counters Demo README
 ----------------------------------------
-To run the performance counters demo, modify the connection string and connect descriptor to connect to an Oracle Database with a 
-sample HR schema. Also modify the executable name to match the name of your executable in the exception handler.
+This demo shows how to programmatically collect ODP.NET performance counters so that they can be output to a file or console.
+
+For setup, modify the connection string and connect descriptor to connect to an Oracle Database with a sample HR schema. 
+Also modify the executable name to match the name of your executable in the exception handler.
 
 In the app.config, set the performance counters to monitor. This sample monitors the number of pooled connections by setting the 
 PerformanceCounters setting value to 256.
@@ -23,5 +25,8 @@ OraProvCfg.exe is not available in ODP.NET 18c and earlier NuGet releases.
 In Oracle 19c and higher, all installs, including NuGet, will have a script for registering ODP.NET counters.
 
 In the .NET configuration file, set the PerformanceCounters parameter to indicate which counters to monitor. Refer to the ODP.NET 
-documentation of the specific version for these counter values. Optionally, you may set the poolName parameter for each pool you wish 
-to track. Setting a pool name makes it easier to identify the pool you are monitoring.
+documentation of the specific version for these counter values. 
+
+You can also view ODP.NET performance counter data in Windows Performance Monitor. This requires some Windows configuration setup,
+which is discussed step by step in this video:
+https://www.youtube.com/watch?v=k3wLHQALZRk
