--- a/samples/performance-counters/README
+++ b/samples/performance-counters/README
@@ -17,9 +17,9 @@ installs to register ODP.NET performance counters. Registration is required for 
 Monitor. 
 
 Run the following command when using managed ODP.NET: 
-    OraProvCfg /action:register /product:odpm /component:perfcounter /providerpath:"<directory path>\oracle.manageddataaccess.dll“
+* OraProvCfg /action:register /product:odpm /component:perfcounter /providerpath:"<directory path>\oracle.manageddataaccess.dll“
 Or run the following command with Windows administrator privileges when using unmanaged ODP.NET:
-    OraProvCfg /action:register /product:odp /component:perfcounter /providerpath:"<directory path>\oracle.dataaccess.dll“
+* OraProvCfg /action:register /product:odp /component:perfcounter /providerpath:"<directory path>\oracle.dataaccess.dll“
 OraProvCfg.exe is not available in ODP.NET 18c and earlier NuGet releases.
 
 In Oracle 19c and higher, all installs, including NuGet, will have a script for registering ODP.NET counters.
@@ -28,5 +28,4 @@ In the .NET configuration file, set the PerformanceCounters parameter to indicat
 documentation of the specific version for these counter values. 
 
 You can also view ODP.NET performance counter data in Windows Performance Monitor. This requires some Windows configuration setup,
-which is discussed step by step in this video:
-https://www.youtube.com/watch?v=k3wLHQALZRk
+which is discussed step by step in [this video](https://www.youtube.com/watch?v=mNwaYIazxlw).
