--- a/session-demos/2019/odtscreenshots/readme
+++ b/session-demos/2019/odtscreenshots/readme
@@ -1,2 +1,2 @@
 
-Please talk to christian.shay before deleting or moving this directory. Thank you!
+Please talk to christianshay before deleting or moving this directory. Thank you!
